# cp2406_a3

./: CMakeLists.txt  README.md  calculate_duration.cpp  calculate_memory.cpp
nbody/: BarnzNhutt.cpp  BarnzNhutt.h  Bhtree.cpp  CMakeLists.txt  Constants.h  Octant.cpp  README.md  RunSimulation.cpp
nbody/image/: README.md
